syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "GrpcAppProto";
option objc_class_prefix = "GAP";

service ServiceName {
  rpc saveData(SaveDataRequest) returns (SaveDataResponse) {}
  rpc readData(ReadDataRequest) returns (ReadDataResponse) {}
  rpc listAllData(ListAllDataRequest) returns (stream ReadDataResponse) {}
  rpc searchData(SearchDataRequest) returns (SearchDataResponse) {}

  rpc downloadImage(ImageDownloadRequest) returns (stream FileChunk) {}
  rpc uploadImage(stream FileChunk) returns (ImageUploadResponse) {}
}

message SaveDataRequest {
  string id = 1;
  string employeename = 2;
  string filename = 3;
  int32 age = 4;
}

message SaveDataResponse {
  string message = 1;
}

message ReadDataRequest {
  string id = 1;
}

message ReadDataResponse {
  string id = 1;
  string employeename = 2;
  string filename = 3;
  int32 age = 4;
}

message ListAllDataRequest {}

//message DataRecord {
//  string id = 1;
//  string employeename = 2;
//  string filename = 3;
//  int32 age = 4;
//}

message SearchDataRequest {
  string employeename = 1;
}

message SearchDataResponse {
  int32 count = 1;
}

message ImageDownloadRequest {
  string filename = 1;
}

message FileChunk {
  string filename = 1;
  int32 num_of_bytes = 2;
  bytes chunk = 3;
  string employeeId = 4;
}

message ImageUploadResponse {
  string message = 1;
}